<resources>
    <string name="app_name">iSigns</string>
    <string name="name">Name</string>
    <string name="title">Event Title</string>
    <string name="email">Email</string>
    <string name="notes">Notes</string>
    <string name="seminar">Seminar</string>
    <string name="lecture">Lecture</string>
    <string name="ok">OK</string>
    <string name="book">BOOK THE ROOM</string>
    <string name="confirm_booking">Your booking is confirmed!</string>
    <string name="enter_details">PLEASE ENTER YOUR BOOKING CODE</string>

    <string name="room">Harrison 208</string>
    <string name="booking_code">Booking code</string>
    <string name="jon">Jon Doe</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="eventType">Event Type</string>
</resources>
